--- a/activemq_email_consumer/pom.xml
+++ b/activemq_email_consumer/pom.xml
@@ -9,9 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>spring_activemq_email_producer</artifactId>
-
-
+    <artifactId>activemq_email_consumer</artifactId>
 
     <properties>
         <java.version>17</java.version>
@@ -26,6 +24,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -46,5 +50,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
