--- a/activemq_tx_rx/pom.xml
+++ b/activemq_tx_rx/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>spring_activemq_tx_rx</artifactId>
+    <artifactId>activemq_tx_rx</artifactId>
 
     <properties>
         <java.version>17</java.version>
