--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,11 @@
     <name>spring_jms_zero_to_hero</name>
 	<description>Demo project for Spring Boot</description>
     <modules>
-        <module>spring_jms_activemq_inmemory</module>
+        <module>activemq_inmemory</module>
 		<module>activemq_email_basic</module>
-		<module>spring_activemq_email_producer</module>
-		<module>spring_activemq_email_consumer</module>
-		<module>spring_activemq_tx_rx</module>
+		<module>activemq_email_producer</module>
+		<module>activemq_email_consumer</module>
+		<module>activemq_tx_rx</module>
 	</modules>
     <properties>
 		<java.version>17</java.version>
